--- a/content/scenarios.html
+++ b/content/scenarios.html
@@ -1,5 +1,5 @@
 <h2>Scenarios</h2>
-<p>The EA-Apocalypse tournament game rules are designed to be used in conjunction with the EA-Apocalypse army lists.
+<p>The EA-Ragnarok tournament game rules are designed to be used in conjunction with the EA-Ragnarok army lists.
     They will allow two players to fight an evenly balanced battle with little or no preparation.</p>
 <div class="container">
     <div class="row">
