--- a/content/scenarios/fog.html
+++ b/content/scenarios/fog.html
@@ -1,5 +1,5 @@
 <h2>Fog of War</h2>
-<p>The EA-Apocalypse tournament game rules are designed to be used in conjunction with the EA-Apocalypse army lists.
+<p>The EA-Ragnarok tournament game rules are designed to be used in conjunction with the EA-Ragnarok army lists.
     They will allow two players to fight an evenly balanced battle with little or no preparation. They are ideal for
     pick-up games at clubs or shows, and provide an evenly balanced contest in tournaments. In many ways, tournament
     games represent the most ‘basic’ form of game play, and are designed to be as easy and accessible as possible in
