--- a/site.html
+++ b/site.html
@@ -14,7 +14,7 @@
     <script src="script/navigation.js?v=1"></script>
     <script src="script/templating.js?v=1"></script>
 
-    <title>EA:Apocalypse</title>
+    <title>EA-Ragnarok</title>
 </head>
 <body>
 
