--- a/content/intro.html
+++ b/content/intro.html
@@ -1,9 +1,9 @@
-<h2>Epic:Armageddon Apocalypse</h2>
+<h2>Epic Armageddon: Ragnarok</h2>
 
 <p>
-    Welcome to the Fan Based website for EA - Apocalypse. On these pages you will find fan based lists and scenarios
+    Welcome to the Fan Based website for EA-Ragnarok. On these pages you will find fan based lists and scenarios
     developed by the
-    EA-Apocalypse team. A lot of list foundations and ideas are credit to the NetEA group, Epic-UK group and the F-ERC
+    EA-Ragnarok team. A lot of list foundations and ideas are credit to the NetEA group, Epic-UK group and the F-ERC
     group. We have done these list because we really enjoy the game and list development.
 </p>
 
