--- a/website/index.htm
+++ b/website/index.htm
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>EA - Apocalypse Offical</title>
+  <title>EA-Ragnarok Offical</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -40,7 +40,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.htm">EA-Apocalypse</a>
+      <a class="navbar-brand" href="index.htm">EA-Ragnarok</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -49,7 +49,7 @@
         <li><a href="">Tournaments</a></li>
         <li><a href="">Ruleset</a></li>
         <li><a href="onlineGaming.htm">Online Gaming</a></li>
-        <li><a href="https://magnusdurr.github.io/snapfire/war/indexEAA.html">Army Builder</a></li>
+        <li><a href="https://magnusdurr.github.io/snapfire/war/indexEAR.html">Army Builder</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
       </ul>
@@ -64,10 +64,10 @@
 </div>
 
 <div class="container text-center" style="text-align: center">
-  <h3>EA - Apocalypse</h3>
+  <h3>EA-Ragnarok</h3>
   <div class="text-left">
-  <br>Welcome to the Fan Based website for  EA - Apocalypse.
-  <br><br>On these pages you will find fan based lists developed by the EA-Apocalypse team. Alot of list foundations and ideas are credit to the netEA group, Epic-UK group and the F-ERC group. We have done these list because we really enjoy the game and list development. We hope we have created a fresh new vibe on the game and we aim for some fun gaming sessions. 
+  <br>Welcome to the Fan Based website for  EA-Ragnarok.
+  <br><br>On these pages you will find fan based lists developed by the EA-Ragnarok team. Alot of list foundations and ideas are credit to the netEA group, Epic-UK group and the F-ERC group. We have done these list because we really enjoy the game and list development. We hope we have created a fresh new vibe on the game and we aim for some fun gaming sessions. 
   <br>
   <br>These list are still in Development and some may not be ready for a balanced game. We have marked lists where we feel they are at within the development for ease of creating a fun game. We also invite you to comment/bring ideas to the table through our Discord channel (link on the 'Online Gaming' page) we have set up. With epic being out of production for many years now, our gaming friends are far and wide for us. We play alot of games online and invite you to also join in on games through the discord channel. We will be setting up a online gaming page with tutorials and links to play games via Table Top Simulator. This software is availible on steam for a few dollars.
 	<br>
@@ -81,7 +81,7 @@
 
 
 <footer class="container-fluid text-center">
-    <p class="text-center">EA Apocalypse<br>This website is unofficial and in no way endorsed by Games Workshop Limited.</p>
+    <p class="text-center">EA-Ragnarok<br>This website is unofficial and in no way endorsed by Games Workshop Limited.</p>
 </footer>
 
 </div>
