--- a/website/liststatus.htm
+++ b/website/liststatus.htm
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
 <head>
-  <title>EA - Apocalypse Offical</title>
+  <title>EA-Ragnarok Offical</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -171,7 +171,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">EA-Apocalypse</a>
+      <a class="navbar-brand" href="#">EA-Ragnarok</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -180,7 +180,7 @@
         <li><a href="">Tournaments</a></li>
         <li><a href="">Ruleset</a></li>
         <li><a href="">Online Gaming</a></li>
-        <li><a href="https://magnusdurr.github.io/snapfire/war/indexEAA.html">Army Builder</a></li>
+        <li><a href="https://magnusdurr.github.io/snapfire/war/indexEAR.html">Army Builder</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
       </ul>
@@ -731,7 +731,7 @@
 </div>
 
 <footer class="container-fluid text-center">
-    <p>EA Apocalypse<br/>This website is unofficial and in no way endorsed by Games Workshop Limited.</p>
+    <p>EA-Ragnarok<br/>This website is unofficial and in no way endorsed by Games Workshop Limited.</p>
 </div>
 
 </footer>
