--- a/content/intro.html
+++ b/content/intro.html
@@ -4,7 +4,7 @@
     Welcome to the Fan Based website for EA-Ragnarok. On these pages you will find fan based lists and scenarios
     developed by the
     EA-Ragnarok team. A lot of list foundations and ideas are credit to the NetEA group, Epic-UK group and the F-ERC
-    group. We have done these list because we really enjoy the game and list development.
+    group. Special thanks to 'Norto' for a ton of the initial work on this project. We have done these list because we really enjoy the game and list development.
 </p>
 
 <p>
