--- a/website/archives(Mobile).htm
+++ b/website/archives(Mobile).htm
@@ -91,7 +91,7 @@
       <a><strong><br><br>Asta Militarum</strong></a>
       <a href="https://magnusdurr.github.io/list-view/index.html?race=IG&list=barans"><br>Baran Siegemasters</a>
       <a href="https://magnusdurr.github.io/list-view/index.html?race=IG&list=cadianshocktroops"><br>Cadian Shock Troops</a>
-      <a href="https://magnusdurr.github.io/list-view/index.html?race=IG&list=catachandeathworld"><br>Catachan Death World</a>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=IG&list=catachandeathworld"><br>Catachan Jungle Fighters</a>
       <a href="https://magnusdurr.github.io/list-view/index.html?race=IG&list=deathkorps"><br>Death Korps of Krieg</a>
       <a href="https://magnusdurr.github.io/list-view/index.html?race=IG&list=elysiandroptroops"><br>Elysian Drop Troops</a>
       <a><strong><br><br>Chaos Space Marines</strong></a>
