--- a/website/archives.htm
+++ b/website/archives.htm
@@ -144,7 +144,7 @@
     </div>
     <div class="col-sm-2">
       <img src="img/AstraMilitarum_Catachan.jpg" class="img-responsive" style="width:100%" alt="Image">
-      <a href="https://magnusdurr.github.io/list-view/index.html?race=IG&list=catachandeathworld">Astra Militarum<br>Catachan Death World<br>(Beta)</a>
+      <a href="https://magnusdurr.github.io/list-view/index.html?race=IG&list=catachandeathworld">Astra Militarum<br>Catachan Jungle Fighters<br>(Beta)</a>
     </div>
   </div>
   <div class="row">
