--- a/website/onlineGaming.htm
+++ b/website/onlineGaming.htm
@@ -106,7 +106,7 @@
 	Harlequins - Masque of the Veiled Path <br>
 	Harlequins - Masque of the Midnight Sorrow<br>
 	Astra Militarum - Baran Siege Masters<br>
-	Astra Militarum - Catachan Death World<br>
+	Astra Militarum - Catachan Jungle Fighters<br>
 	Astra Militarum - Cadian Shock Troops <br>
 	Astra Militarum - Elysians <br>
 	Astra Militarum - Steel Legion <br>
