--- a/content/intro.html
+++ b/content/intro.html
@@ -8,7 +8,7 @@
 </p>
 
 <p>
-    These list are still in Development and some may not be ready for a balanced game. We have marked lists where we
+    These list are still in development and some may not be ready for a balanced game. We have marked lists where we
     feel they are at within the development for ease of creating a fun game. We also invite you to comment/bring ideas
     to the table through our Discord channel (link on the 'Online Gaming' page) we have set up. With epic being out of
     production for many years now, our gaming friends are far and wide for us. We play alot of games online and invite
