--- a/content/rules.html
+++ b/content/rules.html
@@ -25,7 +25,7 @@
     <li>
         We have introduced a general weakness to being swarmed by enemy infantry. To do this we have reduced the close
         combat value of many titans and also changed the stats on the Titan close combat weapons. Titan close combat
-        weapons now generally give one extra TK attack doing multiple woulds instead of giving multiple extra TK or
+        weapons now generally give one extra TK attack doing multiple damage instead of giving multiple extra TK or
         Macro attacks. This reduces their efficiency against infantry while still being useful against other War
         Engines.
     </li>
