--- a/website/liststatus.htm
+++ b/website/liststatus.htm
@@ -486,7 +486,7 @@
 		</tr>
 		<tr class="auto-style3">
 			<td class="style7" style="width: 184px"><strong></strong></td>
-			<td class="style10" style="width: 228px">Eldar Titan Force</td>
+			<td class="style10" style="width: 228px">Fir Lirithion</td>
 			<td class="style7" style="width: 42px">&nbsp;</td>
 			<td class="style9" style="width: 77px">&nbsp;</td>
 			<td class="style6" style="width: 96px">&nbsp;</td>
