--- a/content/scenarios/fire.html
+++ b/content/scenarios/fire.html
@@ -66,7 +66,7 @@
     of the turn. This includes having made a complete move as part of an order (for example after the first move in a
     double. In this case the second move could then take the formation beyond 15cm). Aircraft and spacecraft can’t
     contest or claim as normal unless it has a transport capacity and has the option of landing. Aircraft that can land
-    may only flip objectives in the end phase if it has stayed on the table and is still unbroken.</p>
+    may only flip objectives in the End Phase if it has stayed on the table and is still unbroken.</p>
 <p>Broken formations that rally within 15cm of an objective may not flip them during that turn, but may flip them as
     normal at the beginning of the next turn.</p>
 <p>Each Objective is worth 1 VP in the End Phase. Destroying the enemy BTS is worth a onetime bonus of 3 VP. VPs
