--- a/content/scenarios/fog.html
+++ b/content/scenarios/fog.html
@@ -24,9 +24,9 @@
     an objective marker but we would suggest using terrain pieces to represent them if you can. In our games, we’ve
     found that battling over an actual bunker or fuel dump is far more appealing than having your forces sell their
     lives for a cardboard counter!</p>
-<p>You capture an objective if you have a unit within 15cms of it in the end phase and your opponent does not. An
-    objective is contested if both sides have a unit within 15cms of it in the end phase. Units from broken formations
-    or from formations that have rallied that end phase cannot capture or contest objectives. Aircraft which have landed
+<p>You capture an objective if you have a unit within 15cms of it in the End Phase and your opponent does not. An
+    objective is contested if both sides have a unit within 15cms of it in the End Phase. Units from broken formations
+    or from formations that have rallied that End Phase cannot capture or contest objectives. Aircraft which have landed
     may not capture an objective on the same turn that it lands. However, a landed aircraft may immediately contest an
     objective.</p>
 <p>Check at the end of each turn to see how many objectives you control. Objectives do not have a ‘memory’ and you will
@@ -75,7 +75,7 @@
 <p>You must check to see if either player has won at the end of the third and fourth game turns. If neither player has
     won at the end of the fourth turn then the ‘tiebreaker’ rule is used to determine the winner.</p>
 <p>Each player is trying to achieve five things known as goals. You win if you have achieved two of these goals in the
-    end phase of turns three or four, and you have achieved more goals than your opponent. The five goals are:
+    End Phase of turns three or four, and you have achieved more goals than your opponent. The five goals are:
     Blitzkrieg, Break Their Spirit, Defend The Flag, Take And Hold, and They Shall Not Pass.</p>
 <dl>
     <dt>Blitzkrieg</dt>
