--- a/content/scenarios/battleline.html
+++ b/content/scenarios/battleline.html
@@ -18,8 +18,8 @@
 <p>Take it in turns, starting with the player with the higher Strategy Rating, to place one objective marker on the
     table. If both players have the same Strategy Rating then dice to see who places the first objective marker.</p>
 <p>The first objective a player sets up must be placed on their own table edge 15cm from any corner. The remaining two
-    objectives must be set up in their opponent’s half of the table, at least 30cm away from the opponent’s table edge,
-    30cm away from any other objectives that have already been placed and 15cm from any board edge.</p>
+    objectives must be set up in their opponent’s half of the table, at least 35cm away from the opponent’s table edge,
+    35cm away from any other objectives that have already been placed and 15cm from any board edge.</p>
 <p>Keep placing objectives until six objective markers have been placed on the table in total. You can use anything as
     an objective marker but we would suggest using terrain pieces to represent them if you can. In our games, we’ve
     found that battling over an actual bunker or fuel dump is far more appealing than having your forces sell their
@@ -87,16 +87,22 @@
     <dt>They Shall Not Pass</dt>
     <dd>You achieve this goal if there are no unbroken enemy formations in your half of the table.</dd>
 </dl>
-<p>If neither player has won at the end of the fourth or any subsequent turn then both players roll a D6 to see if the
-    game carries on another turn or ends in a tiebreak.</p>
-<p>If both players roll the same number then the game carries on for another turn and the players must roll again at the
-    end of the next turn to see if the game ends or carries on another turn, and so on. If the players roll different
-    numbers then the game ends in a tiebreak.</p>
-<h3>Battle Tie Break</h3>
-<p>Tie break are resolved by counting each sides losses. Formations that are broken or under half strength gives half
+<p>If neither player has won at the end of the fourth turn it ends in a tiebreak.</p>
+
+<ul>
+    <li>Total Victory (Difference of 4 or more objectives): 32-0 in turn 3, 30-2 in turn 4.</li>
+    <li>Major Victory (Difference of 3 objectives) 30-2 in turn 3, 28-4 in turn 4.</li>
+    <li>Victory (Difference of 2 objectives) 28-4 in turn 3, 26-6 in turn 4.</li>
+    <li>Minor Victory (Difference of 1 objective) 26-6 in turn 3, 24-8 in turn 4.</li>
+    <li>Winning Draw (20-12) (Tiebreak difference of more than 250 BP)</li>
+    <li>Complete Draw (16-16) (Tiebreak difference equal to or less than 250 BP)</li>
+</ul>
+
+<h3>Battle Tiebreak</h3>
+<p>Tiebreaks are resolved by counting each sides losses. Formations that are broken or under half strength gives half
     their points cost in battle points, while formations that are completely destroyed, or both broken and under half
     strength gives their entire points cost in battle points. A difference of 250 BP or more gives a Winning Draw, while
-    250 BP or less gives a Complete Draw. Calculating Tournament VPs</p>
+    250 BP or less gives a Complete Draw.</p>
 <p>If a player gives up the game, or does not show up within 30 minutes it is scored as a Total Victory for the
     opponent. If a game must be abandoned before turn 4 because of lack of time, the current objective total determines
     the score, with a -4 penalty for both sides if the game ended prematurely in turn 2, and a -2 penalty for both sides
