--- a/content/scenarios/fire.html
+++ b/content/scenarios/fire.html
@@ -1,34 +1,17 @@
 <h2>Fire the Beacons</h2>
-<p>The EA-Ragnarok tournament game rules are designed to be used in conjunction with the EA-Ragnarok army lists.
-    They will allow two players to fight an evenly balanced battle with little or no preparation. They are ideal for
-    pick-up games at clubs or shows, and provide an evenly balanced contest in tournaments. In many ways, tournament
-    games represent the most ‘basic’ form of game play, and are designed to be as easy and accessible as possible in
-    order to allow Epic players to play games with the minimum of fuss. Because of this, the tournament rules require
-    little or no preparation other than picking forces from the army lists.</p>
-<p>This Scenario is played to fire all the beacons to alert commanders above when a large enough bridge head has been
-    secured for a full scale areal landing. Hold as much ground as you can to push the enemy off the landing zone and
-    drive your side to victory.</p>
+<p>The EA-Ragnarok tournament game rules are designed to be used in conjunction with the EA-Ragnarok army lists. They will allow two players to fight an evenly balanced battle with little or no preparation. They are ideal for pick-up games at clubs or shows, and provide an evenly balanced contest in tournaments. In many ways, tournament games represent the most ‘basic’ form of game play, and are designed to be as easy and accessible as possible in order to allow Epic players to play games with the minimum of fuss. Because of this, the tournament rules require little or no preparation other than picking forces from the army lists.</p>
+<p>This Scenario is played to fire all the beacons to alert commanders above when a large enough bridge head has been secured for a full scale areal landing. Hold as much ground as you can to push the enemy off the landing zone and drive your side to victory.</p>
 <h3>Setup</h3>
-<p>The tournament table size is 120cm by 180cm (4 feet by 6 feet). The higher Strategy Rating may choose the table edge
-    he sets up on. If both players have the same Strategy Rating, then dice to see who gets the choice of table edge.
-    You can pick a long edge, or a corner (half way up each long and short edge). The opponent sets up on the opposite
-    edge or corner.</p>
+<p>The tournament table size is 120cm by 180cm (4 feet by 6 feet). The higher Strategy Rating may choose the table edge he sets up on. If both players have the same Strategy Rating, then dice to see who gets the choice of table edge. You can pick a long edge, or a corner (half way up each long and short edge). The opponent sets up on the opposite edge or corner.</p>
 <h3>Pre-game discussion</h3>
 <p>This is the time to discuss terrain with your opponent if the tables have not been giving a terrain card describing
     the table and basic layout. Work out with your opponent what things will be played as. For example, forests, hills,
     buildings etc.</p>
 <h3>Place Objective Markers</h3>
-<p>This scenario requires 6 double side objectives, each side of the objective representing each player. (6 large dice
-    can work if needed with 1 representing a player and 6 the other player).</p>
-<p>Take it in turns, starting with the player with the higher Strategy Rating, to place one objective marker on the
-    table. If both players have the same Strategy Rating then dice to see who places the first objective marker.</p>
-<p>The first objective a player sets up must be placed on their own table edge 15cm from any corner. The remaining two
-    objectives must be set up in their opponent’s half of the table, at least 30cm away from the opponent’s table edge,
-    30cm away from any other objectives that have already been placed and 15cm from any board edge.</p>
-<p>Keep placing objectives until six objective markers have been placed on the table in total. You can use anything as
-    an objective marker but we would suggest using terrain pieces to represent them if you can. In our games, we’ve
-    found that battling over an actual bunker or fuel dump is far more appealing than having your forces sell their
-    lives for a cardboard counter!</p>
+<p>This scenario requires 3 objectives for each player, with a special marker or double sided marker (for example a coin) which can be flipped or exchanged as objectives switch control between players.</p>
+<p>Take it in turns, starting with the player with the higher Strategy Rating, to place one objective marker on the table. If both players have the same Strategy Rating then dice to see who places the first objective marker.</p>
+<p>The first objective a player sets up must be placed on their own table edge 15cm from any corner. The remaining two objectives must be set up in their opponent’s half of the table, at least 35cm away from the opponent’s table edge, 35cm away from any other objectives that have already been placed and 15cm from any board edge.</p>
+<p>Keep placing objectives until six objective markers have been placed on the table in total.</p>
 <p>Each objective starts the game in possession of the player who's half it is.</p>
 <h3>Setup Spacecraft & Garrisons</h3>
 <p>Each player may start up to two of their garrisoned formations on Overwatch. These formations represent sentries
@@ -62,23 +45,22 @@
     aircraft and planetfall (see 4.2.5 & 4.4) Formations that are in reserve may not carry out any game functions or use
     special abilities they may have.</p>
 <h3>Victory Conditions</h3>
-<p>Objectives flips sides if the opposing side is the only one that has an unbroken unit within 15cm of it at any point
-    of the turn. This includes having made a complete move as part of an order (for example after the first move in a
-    double. In this case the second move could then take the formation beyond 15cm). Aircraft and spacecraft can’t
-    contest or claim as normal unless it has a transport capacity and has the option of landing. Aircraft that can land
-    may only flip objectives in the End Phase if it has stayed on the table and is still unbroken.</p>
-<p>Broken formations that rally within 15cm of an objective may not flip them during that turn, but may flip them as
-    normal at the beginning of the next turn.</p>
-<p>Each Objective is worth 1 VP in the End Phase. Destroying the enemy BTS is worth a onetime bonus of 3 VP. VPs
-    accumulate from turn to turn.</p>
+<p>Objectives flips sides when the opposing side is the only one that has an unbroken unit within 15cm of it at any point of the turn before rallying is carried out during the End Phase. This includes having made a complete move as part of an order (for example after the first move in a double. In this case the second move could then take the formation beyond 15cm). Formations that are restricted to contesting objectives may only prevent enemy formations from flipping objectives.</p>
+<p>Broken formations that rally and landed aircraft that remains on the table within 15cm of an objective may not flip them during that turn, but may flip them as normal at the beginning of the next turn.</p>
+<p>Each objective is worth 1 VP in the End Phase, except for the objective in the enemy deployment zone (the "Blitz" objective), which is worth 1 VP for the friendly player, and 2 VP for the enemy player. Destroying the most valuable enemy formation (the "BTS" formation) is worth a one-time bonus of 3 VP. VPs accumulate from turn to turn, starting in the End Phase of the first turn just before rallying.</p>
 <ul>
-    <li>Total Victory (32-0) (Lead of 8 or more)</li>
-    <li>Major Victory (28-4) (Lead of 5-7)</li>
-    <li>Minor Victory (24-8) (Lead of 3-4)</li>
-    <li>Winning Draw (20-12) (Lead of 2 or less, difference of 250 BP or more)</li>
-    <li>Draw (16-16) (Lead of 2 or less, difference of less than 250 BP)</li>
+    <li>Total Victory (32-0) (Lead of 10 or more)</li>
+    <li>Major Victory (28-4) (Lead of 7-9)</li>
+    <li>Minor Victory (24-8) (Lead of 4-6)</li>
+    <li>Winning Draw (20-12) (Lead of 3 or less, tiebreak difference of more than 250 BP)</li>
+    <li>Complete Draw (16-16) (Lead of 3 or less, tiebreak difference equal to or less than 250 BP)</li>
 </ul>
-<p>If a player has reach a lead of 8 or more at the end of any turn the game ends. Otherwise the game will finish at the
+<h3>Battle Tiebreak</h3>
+<p>Tiebreaks are resolved by counting each sides losses. Formations that are broken or under half strength gives half
+    their points cost in battle points, while formations that are completely destroyed, or both broken and under half
+    strength gives their entire points cost in battle points. A difference of 250 BP or more gives a Winning Draw, while
+    250 BP or less gives a Complete Draw.</p>
+<p>If a player has reach a lead of 10 or more at the end of any turn the game ends. Otherwise the game will finish at the
     end of turn 4.</p>
 <h3>Special Rules</h3>
 <p>If a player gives up the game, or does not show up within 30 minutes it is scored as a Total Victory for the
