--- a/content/scenarios/battleline.html
+++ b/content/scenarios/battleline.html
@@ -94,8 +94,8 @@
     <li>Major Victory (Difference of 3 objectives) 30-2 in turn 3, 28-4 in turn 4.</li>
     <li>Victory (Difference of 2 objectives) 28-4 in turn 3, 26-6 in turn 4.</li>
     <li>Minor Victory (Difference of 1 objective) 26-6 in turn 3, 24-8 in turn 4.</li>
-    <li>Winning Draw (20-12) (Tiebreak difference of more than 250 BP)</li>
-    <li>Complete Draw (16-16) (Tiebreak difference equal to or less than 250 BP)</li>
+    <li>Winning Draw (Tiebreak difference of more than 250 BP). 20-12.</li>
+    <li>Complete Draw (Tiebreak difference equal to or less than 250 BP) 16-16.</li>
 </ul>
 
 <h3>Battle Tiebreak</h3>
