--- a/content/scenarios/battleline.html
+++ b/content/scenarios/battleline.html
@@ -27,8 +27,7 @@
 <p>You capture an objective if you have a unit within 15cms of it in the End Phase and your opponent does not. An
     objective is contested if both sides have a unit within 15cms of it in the End Phase. Units from broken formations
     or from formations that have rallied that End Phase cannot capture or contest objectives. Aircraft which have landed
-    may not capture an objective on the same turn that it lands. However, a landed aircraft may immediately contest an
-    objective.</p>
+    may not capture nor contest objectives on the same turn that it lands.</p>
 <p>Check at the end of each turn to see how many objectives you control. Objectives do not have a ‘memory’ and you will
     lose control of any you have captured if there are no friendly units within 15cms of them at the end of any
     subsequent turn.</p>
