--- a/content/scenarios/fire.html
+++ b/content/scenarios/fire.html
@@ -14,7 +14,7 @@
 <p>Keep placing objectives until six objective markers have been placed on the table in total.</p>
 <p>Each objective starts the game in possession of the player who's half it is.</p>
     <p>Objectives flips sides when the opposing side is the only one that has an unbroken unit within 15cm of it at any point of the turn before rallying is carried out during the End Phase. This includes having made a complete move as part of an order (for example after the first move in a double. In this case the second move could then take the formation beyond 15cm). Formations that are restricted to contesting objectives may only prevent enemy formations from flipping objectives.</p>
-    <p>Broken formations that rally and landed aircraft that remains on the table within 15cm of an objective may not flip them during that turn, but may flip them as normal at the beginning of the next turn.</p>
+    <p>Broken formations that rally and landed aircraft that remains on the table within 15cm of an objective may not flip them during that turn, nor prevent opponents from flipping, but may flip them as normal at the beginning of the next turn.</p>
     <p>Each objective is worth 1 VP in the End Phase, except for the objective in the enemy deployment zone (the "Blitz" objective), which is worth 1 VP for the friendly player, and 2 VP for the enemy player. Destroying the most valuable enemy formation (the "BTS" formation) is worth a one-time bonus of 3 VP. VPs accumulate from turn to turn, starting in the End Phase of the first turn just before rallying.</p>
     <ul>
 <h3>Setup Spacecraft & Garrisons</h3>
