--- a/content/rules.html
+++ b/content/rules.html
@@ -59,3 +59,43 @@
     Many formation upgrades have received a price reduction to compensate for the loss of activations. We felt that many
     upgrades were too pricy and were rarely taken given the importance of activations in Epic.
 </p>
+
+<h3>Optional Terrain Rules</h3>
+<p>
+    Some types of terrain are much more common than others, due to the unbalancing influence that certain types of terrain can have on the game.
+    For this reason, here are a set of optional/expanded general terrain rules and concepts (Certain types of player-placed terrain such as Bunkers, Trenches etc. are covered by the Fortified Positions special rule.))
+
+    Abstract Terrain:
+
+    Armoured Vehicles:
+
+    Impassable Terrain:
+
+    Hills:
+
+    Open Ground:
+
+    Roads:
+
+    Terrain Line of Sight:
+
+
+                                INF                       AV                            WE                  Blocks Line of Sight
+    Urban (Abstract Terrain):   4+ Cover Save            Cover Save, Dangerous          Impassable          Yes
+    Buildings:                  4+ Cover Save            Impassable                     Impassable          Yes
+    Impassable Terrain:         Impassable, Cover Save   Impassable
+    Walls:
+    Fortifications:
+    Jungle:                     4+ Cover Save            Impassable                     Dangerous
+    Marsh:
+    Open Ground, Hills:
+    River, Water:
+    Lava Flow:
+    Roads:
+    Ruins, Rubble:
+    Scrub:
+    Woods:
+
+
+
+</p>
