--- a/content/armies.html
+++ b/content/armies.html
@@ -1,13 +1,13 @@
 <h2>Armies</h2>
 <div class="row">
-    <div class="col" style="line-height: 1.0">
+    <div class="col-md-9 col-12" style="line-height: 1.0">
         <b>Approved</b> - Tournament ready and balanced<br>
         <b>Beta</b> - Currently being tested for approval<br>
         <b>Alpha</b> - Awaiting testing. Might experience significant rework<br>
         <b>Experimental</b> - Experiments and Fanlists. Suitable for casual play
     </div>
-    <div class="col-2">
-        <div class="dropdown">
+    <div class="col-md-3 col-12">
+        <div class="dropdown" style="margin-top:10px">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
                     data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
