Added list design section for future use

--- a/content/list.html
+++ b/content/list.html
@@ -9,8 +9,6 @@
         if (race && list) {
             $.when(units.loadSpecialRules(), units.loadWeapons()).done(function (specialRules, weapons) {
                 $.getJSON("lists/" + race + "/" + list + ".json", function (data) {
-                        $(document).prop('title',);
-
                         var content = $("#content");
                         content.append(eaTemplating.templates['error']({"errors": units.errors}));
 
@@ -20,7 +18,7 @@
                             content.append(eaTemplating.templates['units'](units));
                         });
 
-                        content.app
+                    content.append(eaTemplating.templates['about'](data.about));
                     }
                 ).fail(function (jqxhr, textStatus, error) {
                     $("#content").html('<h2 class="text-danger">These Are Not The Droids Youre Looking For</h2><p>File: lists/' + race + '/' + list + '.json missing or invalid, error: ' + textStatus);
