--- a/content/scenarios/battleline.html
+++ b/content/scenarios/battleline.html
@@ -1,112 +1,34 @@
 <h2>Battle Line</h2>
-<p>The EA-Ragnarok tournament game rules are designed to be used in conjunction with the EA-Ragnarok army lists.
-    They will allow two players to fight an evenly balanced battle with little or no preparation. They are ideal for
-    pick-up games at clubs or shows, and provide an evenly balanced contest in tournaments. In many ways, tournament
-    games represent the most ‘basic’ form of game play, and are designed to be as easy and accessible as possible in
-    order to allow Epic players to play games with the minimum of fuss. Because of this, the tournament rules require
-    little or no preparation other than picking forces from the army lists.</p>
 <h3>Setup</h3>
-<p>The tournament table size is 120cm by 180cm (4 feet by 6 feet). The higher Strategy Rating may choose the table edge
-    he sets up on. If both players have the same Strategy Rating, then dice to see who gets the choice of table edge.
-    You can pick a long edge, or a corner (half way up each long and short edge). The opponent sets up on the opposite
-    edge or corner.</p>
-<h3>Pre-game discussion</h3>
-<p>This is the time to discuss terrain with your opponent if the tables have not been giving a terrain card describing
-    the table and basic layout. Work out with your opponent what things will be played as. For example, forests, hills,
-    buildings etc.</p>
+<p>Same as the normal Epic Tournament Scenario.</p>
 <h3>Place Objective Markers</h3>
-<p>Take it in turns, starting with the player with the higher Strategy Rating, to place one objective marker on the
-    table. If both players have the same Strategy Rating then dice to see who places the first objective marker.</p>
-<p>The first objective a player sets up must be placed on their own table edge 15cm from any corner. The remaining two
-    objectives must be set up in their opponent’s half of the table, at least 30cm away from the opponent’s table edge,
-    30cm away from any other objectives that have already been placed and 15cm from any board edge.</p>
-<p>Keep placing objectives until six objective markers have been placed on the table in total. You can use anything as
-    an objective marker but we would suggest using terrain pieces to represent them if you can. In our games, we’ve
-    found that battling over an actual bunker or fuel dump is far more appealing than having your forces sell their
-    lives for a cardboard counter!</p>
-<p>You capture an objective if you have a unit within 15cms of it in the End Phase and your opponent does not. An
-    objective is contested if both sides have a unit within 15cms of it in the End Phase. Units from broken formations
-    or from formations that have rallied that End Phase cannot capture or contest objectives. Aircraft which have landed
-    may not capture nor contest objectives on the same turn that it lands.</p>
-<p>Check at the end of each turn to see how many objectives you control. Objectives do not have a ‘memory’ and you will
-    lose control of any you have captured if there are no friendly units within 15cms of them at the end of any
-    subsequent turn.</p>
+<p>Same as in the Epic Tournament Scenario, but the Blitz objective must be placed at least 15cm from any corner, and the remaining two
+    objectives must be set up at least 15cm from any board edge.</p>
+<p>As usual, units from broken formations or from formations that have rallied that End Phase cannot capture or contest objectives, but this also includes "They Shall Not Pass". In addition, Aircraft which have landed may neither capture nor contest objectives on the same turn that it lands.</p>
 <h3>Setup Spacecraft & Garrisons</h3>
-<p>Each player may start up to two of their garrisoned formations on Overwatch. These formations represent sentries
-    deployed as a trip wire and to provide security at the objectives. They are assumed to have gone on Overwatch in
-    their previous Action phase. That Overwatch is ‘carried over’ into the first turn.</p>
-<p>If either player is using spacecraft then they are set up now before any other units (see 4.3). Units entering play
-    via planetfall should be placed to one side at this time too (see 4.4).</p>
-<p>On-table garrison units are set up after spacecraft have been set up. The following types of formations may be set up
-    on the table as ‘garrisons’ at the start of the game:</p>
-<ul>
-    <li>Formations where half or more of the units (rounding up) are scouts</li>
-    <li>Formations where no more than one of the units has a move greater than 15cms, and where none of the units are
-        war engines
-    </li>
-    <li>Any formations that include units with a speed of 0 (zero).</li>
-</ul>
-<p>Players take it in turns to set up one garrison at a time, starting with the player with the higher Strategy Rating.
-    Garrisons must be set up so that they have at least one unit within 15cm of an objective in the player’s own half of
-    the table. No units may be set up in the opponent’s half of the table or in impassable terrain. Units may be set up
-    in dangerous terrain (it’s assumed that they took their time getting into position in order to do so safely!)</p>
+<p>Same as the normal Epic Tournament Scenario.</p>
 <h3>Set-up Remaining Formations</h3>
-<p>All of the remaining formations in the players’ armies must be set up within 15cms of their own side’s table edge or
-    be kept back ‘in reserve’. The players take it in turn to set up these formations one at a time, starting with the
-    player with the higher Strategy Rating.</p>
-<p>Units kept in reserve must either be aircraft, or be going to enter play in a transport aircraft or by teleportation.
-    Reserve formations entering play in aircraft or by teleportation should be placed aside with units that will enter
-    play via planetfall. These formations are not ‘secret’ and your opponent may inspect them at any time.</p>
-<p>Units being transported must start the game already loaded into the transport vehicle that will bring them into play
-    (ie, an aircraft or unit with the planetfall ability).</p>
-<p>Formations entering play in aircraft or from spacecraft can do so on any turn, following the rules for transport
-    aircraft and planetfall (see 4.2.5 & 4.4) Formations that are in reserve may not carry out any game functions or use
-    special abilities they may have.</p>
+<p>Same as the normal Epic Tournament Scenario.</p>
 <h3>Victory Conditions</h3>
-<p>If at the end of any turn a player has achieved 4 or more Victory Conditions then the opponent then the game ends,
+<p>If at the end of any turn a player has achieved 4 or more Victory Conditions than the opponent then the game ends,
     compare victory conditions and work out tournament/battle points.</p>
 <p>You must check to see if either player has won at the end of the third and fourth game turns. If neither player has
     won at the end of the fourth turn then the ‘tiebreaker’ rule is used to determine the winner.</p>
-<p>Each player is trying to achieve five things known as goals. You win if you have achieved two of these goals in the
-    End Phase of turns three or four, and you have achieved more goals than your opponent. The five goals are:
-    Blitzkrieg, Break Their Spirit, Defend The Flag, Take And Hold, and They Shall Not Pass.</p>
-<dl>
-    <dt>Blitzkrieg</dt>
-    <dd>You achieve this goal by capturing the objective that was set up on the opponent’s table edge at the start of
-        the game (ie, the first objective each player set up).
-    </dd>
-    <dt>Break Their Spirit</dt>
-    <dd>You achieve this goal by destroying (not breaking) the formation worth the most points in the opposing army. If
-        several formations are tied for the most points, you achieve this goal by destroying any one of them.
-    </dd>
-    <dt>Defend To Flag</dt>
-    <dd>You achieve this goal if you control all three objectives in your half of the table.</dd>
-    <dt>Take and Hold</dt>
-    <dd>You achieve this goal by capturing a total of two objectives in your opponent’s half of the table.</dd>
-    <dt>They Shall Not Pass</dt>
-    <dd>You achieve this goal if there are no unbroken enemy formations in your half of the table.</dd>
+<p> Otherwise it is the same as the normal Epic Tournament Scenario.</p>
 </dl>
-<p>If neither player has won at the end of the fourth turn it ends in a tiebreak.</p>
-
 <ul>
     <li>Total Victory (Difference of 4 or more objectives): 32-0 in turn 3, 30-2 in turn 4.</li>
     <li>Major Victory (Difference of 3 objectives) 30-2 in turn 3, 28-4 in turn 4.</li>
     <li>Victory (Difference of 2 objectives) 28-4 in turn 3, 26-6 in turn 4.</li>
     <li>Minor Victory (Difference of 1 objective) 26-6 in turn 3, 24-8 in turn 4.</li>
-    <li>Winning Draw (Tiebreak difference of more than 250 BP). 20-12.</li>
+    <li>Winning Draw (Tiebreak difference of more than 750 BP). 20-12.</li>
+    <li>Minor Winning Draw (Tiebreak difference of more than 250 BP). 18-14.</li>
     <li>Complete Draw (Tiebreak difference equal to or less than 250 BP) 16-16.</li>
 </ul>
 
 <h3>Battle Tiebreak</h3>
-<p>Tiebreaks are resolved by counting each sides losses. Formations that are broken or under half strength gives half
-    their points cost in battle points, while formations that are completely destroyed, or both broken and under half
-    strength gives their entire points cost in battle points. A difference of 250 BP or more gives a Winning Draw, while
-    250 BP or less gives a Complete Draw.</p>
-<p>If a player gives up the game, or does not show up within 30 minutes it is scored as a Total Victory for the
-    opponent. If a game must be abandoned before turn 4 because of lack of time, the current objective total determines
-    the score, with a -4 penalty for both sides if the game ended prematurely in turn 2, and a -2 penalty for both sides
-    if the game ended prematurely in turn 3. If one player was late to the game start by more than 5 minutes, that
-    player takes both player’s penalties.</p>
+<p>Same as the normal Epic Tournament Scenario.</p>
+
 <h3>Special Rules</h3>
 <p>If a player gives up the game, or does not show up within 30 minutes it is scored as a Total Victory for the
     opponent. If a game must be abandoned before turn 4 because of lack of time, the current objective total determines
