--- a/content/scenarios/fire.html
+++ b/content/scenarios/fire.html
@@ -1,68 +1,27 @@
 <h2>Fire the Beacons</h2>
-<p>The EA-Ragnarok tournament game rules are designed to be used in conjunction with the EA-Ragnarok army lists. They will allow two players to fight an evenly balanced battle with little or no preparation. They are ideal for pick-up games at clubs or shows, and provide an evenly balanced contest in tournaments. In many ways, tournament games represent the most ‘basic’ form of game play, and are designed to be as easy and accessible as possible in order to allow Epic players to play games with the minimum of fuss. Because of this, the tournament rules require little or no preparation other than picking forces from the army lists.</p>
-<p>This Scenario is played to fire all the beacons to alert commanders above when a large enough bridge head has been secured for a full scale areal landing. Hold as much ground as you can to push the enemy off the landing zone and drive your side to victory.</p>
 <h3>Setup</h3>
-<p>The tournament table size is 120cm by 180cm (4 feet by 6 feet). The higher Strategy Rating may choose the table edge he sets up on. If both players have the same Strategy Rating, then dice to see who gets the choice of table edge. You can pick a long edge, or a corner (half way up each long and short edge). The opponent sets up on the opposite edge or corner.</p>
-<h3>Pre-game discussion</h3>
-<p>This is the time to discuss terrain with your opponent if the tables have not been giving a terrain card describing
-    the table and basic layout. Work out with your opponent what things will be played as. For example, forests, hills,
-    buildings etc.</p>
+<p>Same as the normal Epic Tournament Scenario.</p>
 <h3>Place Objective Markers</h3>
-<p>This scenario requires 3 objectives for each player, with a special marker or double sided marker (for example a coin) which can be flipped or exchanged as objectives switch control between players.</p>
-<p>Take it in turns, starting with the player with the higher Strategy Rating, to place one objective marker on the table. If both players have the same Strategy Rating then dice to see who places the first objective marker.</p>
-<p>The first objective a player sets up must be placed on their own table edge 15cm from any corner. The remaining two objectives must be set up in their opponent’s half of the table, at least 30cm away from the opponent’s table edge, 30cm away from any other objectives that have already been placed and 15cm from any board edge.</p>
-<p>Keep placing objectives until six objective markers have been placed on the table in total.</p>
-<p>Each objective starts the game in possession of the player who's half it is.</p>
-    <p>Objectives flips sides when the opposing side is the only one that has an unbroken unit within 15cm of it at any point of the turn before rallying is carried out during the End Phase. This includes having made a complete move as part of an order (for example after the first move in a double. In this case the second move could then take the formation beyond 15cm). Formations that are restricted to contesting objectives may only prevent enemy formations from flipping objectives.</p>
-    <p>Broken formations that rally and landed aircraft that remains on the table within 15cm of an objective may not flip them during that turn, nor prevent opponents from flipping, but may flip them as normal at the beginning of the next turn.</p>
+<p>This scenario requires 3 special objective tokens for each player, with a special marker or double sided marker (for example a coin) which can be flipped or exchanged as objectives switch control between players.</p>
+<p>These objectives are placed in the same manner as in the Epic Tournament Scenario, but the Blitz objective must be placed at least 15cm from any corner, and the remaining two objectives must be set up at least 15cm from any board edge.</p>
+<p>As usual, units from broken formations or from formations that have rallied that End Phase cannot capture or contest objectives, but this also includes "They Shall Not Pass". In addition, Aircraft which have landed may neither capture nor contest objectives on the same turn that it lands.</p>
+<p>Each objective starts the game in possession of the player who's half it is. Unlike in the normal Epic Tournament Scenario, objectives do have memory.</p>
+    <p>Objectives flips sides when the opposing side is the only one that has an unbroken unit within 15cm of it at any point of the turn. This includes units that have successfully rallied, and units that have made a complete move as part of an order (for example after the first move in a double). Formations that are restricted to contesting objectives may only prevent enemy formations from flipping objectives.</p>
     <p>Each objective is worth 1 VP in the End Phase, except for the objective in the enemy deployment zone (the "Blitz" objective), which is worth 1 VP for the friendly player, and 2 VP for the enemy player. Destroying the most valuable enemy formation (the "BTS" formation) is worth a one-time bonus of 3 VP. VPs accumulate from turn to turn, starting in the End Phase of the first turn just before rallying.</p>
     <ul>
 <h3>Setup Spacecraft & Garrisons</h3>
-<p>Each player may start up to two of their garrisoned formations on Overwatch. These formations represent sentries
-    deployed as a trip wire and to provide security at the objectives. They are assumed to have gone on Overwatch in
-    their previous Action phase. That Overwatch is ‘carried over’ into the first turn.</p>
-<p>If either player is using spacecraft then they are set up now before any other units. Units entering play via
-    planetfall should be placed to one side at this time too.</p>
-<p>On-table garrison units are set up after spacecraft have been set up. The following types of formations may be set up
-    on the table as ‘garrisons’ at the start of the game:</p>
-<ul>
-    <li>Formations where half or more of the units (rounding up) are scouts</li>
-    <li>Formations where no more than one of the units has a move greater than 15cms, and where none of the units are
-        war engines
-    </li>
-    <li>Any formations that include units with a speed of 0 (zero).</li>
-</ul>
-<p>Players take it in turns to set up one garrison at a time, starting with the player with the higher Strategy Rating.
-    Garrisons must be set up so that they have at least one unit within 15cm of an objective in the player’s own half of
-    the table. No units may be set up in the opponent’s half of the table or in impassable terrain. Units may be set up
-    in dangerous terrain (it’s assumed that they took their time getting into position in order to do so safely!)</p>
-<h3>Set-up Remaining Formations</h3>
-<p>All of the remaining formations in the players’ armies must be set up within 15cms of their own side’s table edge or
-    be kept back ‘in reserve’. The players take it in turn to set up these formations one at a time, starting with the
-    player with the higher Strategy Rating.</p>
-<p>Units kept in reserve must either be aircraft, or be going to enter play in a transport aircraft or by teleportation.
-    Reserve formations entering play in aircraft or by teleportation should be placed aside with units that will enter
-    play via planetfall. These formations are not ‘secret’ and your opponent may inspect them at any time.</p>
-<p>Units being transported must start the game already loaded into the transport vehicle that will bring them into play
-    (ie, an aircraft or unit with the planetfall ability).</p>
-<p>Formations entering play in aircraft or from spacecraft can do so on any turn, following the rules for transport
-    aircraft and planetfall (see 4.2.5 & 4.4) Formations that are in reserve may not carry out any game functions or use
-    special abilities they may have.</p>
+<p>Same as the normal Epic Tournament Scenario.</p>
 <h3>Victory Conditions</h3>
 
     <li>Total Victory (32-0) (Lead of 10 or more)</li>
     <li>Major Victory (28-4) (Lead of 7-9)</li>
     <li>Minor Victory (24-8) (Lead of 4-6)</li>
-    <li>Winning Draw (20-12) (Lead of 3 or less, tiebreak difference of more than 250 BP)</li>
+    <li>Winning Draw (20-12) (Lead of 3 or less, tiebreak difference of more than 750 BP)</li>
+    <li>Minor Winning Draw (18-14) (Lead of 3 or less, tiebreak difference of more than 250 BP)</li>
     <li>Complete Draw (16-16) (Lead of 3 or less, tiebreak difference equal to or less than 250 BP)</li>
 </ul>
 <h3>Battle Tiebreak</h3>
-<p>Tiebreaks are resolved by counting each sides losses. Formations that are broken or under half strength gives half
-    their points cost in battle points, while formations that are completely destroyed, or both broken and under half
-    strength gives their entire points cost in battle points. A difference of 250 BP or more gives a Winning Draw, while
-    250 BP or less gives a Complete Draw.</p>
-<p>If a player has reach a lead of 10 or more at the end of any turn the game ends. Otherwise the game will finish at the
-    end of turn 4.</p>
+<p>Same as the normal Epic Tournament Scenario.</p>
 <h3>Special Rules</h3>
 <p>If a player gives up the game, or does not show up within 30 minutes it is scored as a Total Victory for the
     opponent. If a game must be abandoned before turn 4 because of lack of time, the current objective total determines
