--- a/content/scenarios/battleline.html
+++ b/content/scenarios/battleline.html
@@ -21,17 +21,8 @@
     <li>Major Victory (Difference of 3 objectives) 30-2 in turn 3, 28-4 in turn 4.</li>
     <li>Victory (Difference of 2 objectives) 28-4 in turn 3, 26-6 in turn 4.</li>
     <li>Minor Victory (Difference of 1 objective) 26-6 in turn 3, 24-8 in turn 4.</li>
-    <li>Winning Draw (Tiebreak difference of more than 750 BP). 20-12.</li>
-    <li>Minor Winning Draw (Tiebreak difference of more than 250 BP). 18-14.</li>
-    <li>Complete Draw (Tiebreak difference equal to or less than 250 BP) 16-16.</li>
+    <li>Winning Draw (Difference of 1 objective at game end, but not 2 objectives). 18-14.</li>
+    <li>Complete Draw (Equal number of objectives) 16-16.</li>
 </ul>
-
 <h3>Battle Tiebreak</h3>
-<p>Same as the normal Epic Tournament Scenario.</p>
-
-<h3>Special Rules</h3>
-<p>If a player gives up the game, or does not show up within 30 minutes it is scored as a Total Victory for the
-    opponent. If a game must be abandoned before turn 4 because of lack of time, the current objective total determines
-    the score, with a -4 penalty for both sides if the game ended prematurely in turn 2, and a -2 penalty for both sides
-    if the game ended prematurely in turn 3. If one player was late to the game start by more than 5 minutes, that
-    player takes both player’s penalties.</p>
+<p>Not used in this Scenario.</p>
