--- a/content/scenarios/fire.html
+++ b/content/scenarios/fire.html
@@ -7,24 +7,19 @@
 <p>As usual, units from broken formations or from formations that have rallied that End Phase cannot capture or contest objectives, but this also includes "They Shall Not Pass". In addition, Aircraft which have landed may neither capture nor contest objectives on the same turn that it lands.</p>
 <p>Each objective starts the game in possession of the player who's half it is. Unlike in the normal Epic Tournament Scenario, objectives do have memory.</p>
     <p>Objectives flips sides when the opposing side is the only one that has an unbroken unit within 15cm of it at any point of the turn. This includes units that have successfully rallied, and units that have made a complete move as part of an order (for example after the first move in a double). Formations that are restricted to contesting objectives may only prevent enemy formations from flipping objectives.</p>
-    <p>Each objective is worth 1 VP in the End Phase, except for the objective in the enemy deployment zone (the "Blitz" objective), which is worth 1 VP for the friendly player, and 2 VP for the enemy player. Destroying the most valuable enemy formation (the "BTS" formation) is worth a one-time bonus of 3 VP. VPs accumulate from turn to turn, starting in the End Phase of the first turn just before rallying.</p>
+    <p>In the End Phase each uncontested Victory Condition (Blitz, They Shall Not Pass etc.) is worth 1 VP. These VPs accumulate from the first turn onwards.</p>
+    <p>The game ends after three turns, or if either player manages to accumulate a lead of 8 VP in the second turn.</p>
 
 <h3>Setup Spacecraft & Garrisons</h3>
 <p>Same as the normal Epic Tournament Scenario.</p>
 <h3>Victory Conditions</h3>
-
-    <li>Total Victory (32-0) (Lead of 10 or more)</li>
-    <li>Major Victory (28-4) (Lead of 7-9)</li>
-    <li>Minor Victory (24-8) (Lead of 4-6)</li>
-    <li>Winning Draw (20-12) (Lead of 3 or less, tiebreak difference of more than 750 BP)</li>
-    <li>Minor Winning Draw (18-14) (Lead of 3 or less, tiebreak difference of more than 250 BP)</li>
-    <li>Complete Draw (16-16) (Lead of 3 or less, tiebreak difference equal to or less than 250 BP)</li>
+    <li>Total Victory (32-0) (Lead of 8 or more)</li>
+    <li>Crushing Victory (30-2) (Lead of 7)</li>
+    <li>Major Victory (28-4) (Lead of 6)</li>
+    <li>Victory (26-6) (Lead of 5)</li>
+    <li>Minor Victory (24-8) (Lead of 4)</li>
+    <li>Winning Draw (18-14) (Lead of 2-3)</li>
+    <li>Complete Draw (16-16) (Lead of 1 or less) </li>
 </ul>
 <h3>Battle Tiebreak</h3>
-<p>Same as the normal Epic Tournament Scenario.</p>
-<h3>Special Rules</h3>
-<p>If a player gives up the game, or does not show up within 30 minutes it is scored as a Total Victory for the
-    opponent. If a game must be abandoned before turn 4 because of lack of time, the current objective total determines
-    the score, with a -4 penalty for both sides if the game ended prematurely in turn 2, and a -2 penalty for both sides
-    if the game ended prematurely in turn 3. If one player was late to the game start by more than 5 minutes, that
-    player takes both player’s penalties.</p>
+<p>Not used in this Scenario.</p>
