--- a/content/scenarios/battleline.html
+++ b/content/scenarios/battleline.html
@@ -1,6 +1,8 @@
 <h2>Battle Line</h2>
 <h3>Setup</h3>
 <p>Same as the normal Epic Tournament Scenario.</p>
+<h3>Pre-game discussion</h3>
+<p>Same as the normal Epic Tournament Scenario.</p>
 <h3>Place Objective Markers</h3>
 <p>Same as in the Epic Tournament Scenario, but the Blitz objective must be placed at least 15cm from any corner, and the remaining two
     objectives must be set up at least 15cm from any board edge.</p>
@@ -17,11 +19,12 @@
 <p> Otherwise it is the same as the normal Epic Tournament Scenario.</p>
 </dl>
 <ul>
+    <h3>Victory Conditions</h3>
     <li>Total Victory (Difference of 4 or more objectives): 32-0 in turn 3, 30-2 in turn 4.</li>
     <li>Major Victory (Difference of 3 objectives) 30-2 in turn 3, 28-4 in turn 4.</li>
     <li>Victory (Difference of 2 objectives) 28-4 in turn 3, 26-6 in turn 4.</li>
     <li>Minor Victory (Difference of 1 objective) 26-6 in turn 3, 24-8 in turn 4.</li>
-    <li>Winning Draw (Difference of 1 objective at game end, but not 2 objectives). 18-14.</li>
+    <li>Winning Draw (Difference of 1 objective at game end, but neither player has 2 objectives). 18-14.</li>
     <li>Complete Draw (Equal number of objectives) 16-16.</li>
 </ul>
 <h3>Battle Tiebreak</h3>
