--- a/content/scenarios/fire.html
+++ b/content/scenarios/fire.html
@@ -1,6 +1,8 @@
 <h2>Fire the Beacons</h2>
 <h3>Setup</h3>
 <p>Same as the normal Epic Tournament Scenario.</p>
+<h3>Pre-game discussion</h3>
+<p>Same as the normal Epic Tournament Scenario.</p>
 <h3>Place Objective Markers</h3>
 <p>This scenario requires 3 special objective tokens for each player, with a special marker or double sided marker (for example a coin) which can be flipped or exchanged as objectives switch control between players.</p>
 <p>These objectives are placed in the same manner as in the Epic Tournament Scenario, but the Blitz objective must be placed at least 15cm from any corner, and the remaining two objectives must be set up at least 15cm from any board edge.</p>
