--- a/site.html
+++ b/site.html
@@ -14,7 +14,7 @@
     <script src="script/navigation.js?v=1"></script>
     <script src="script/templating.js?v=1"></script>
 
-    <title>EA-Ragnarok</title>
+    <title>EA-Ragnarök</title>
 </head>
 <body>
 
@@ -30,10 +30,13 @@
             <a class="nav-link" href="content/rules.html">Rules</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="content/armies.html?filter=all">Armies</a>
+            <a class="nav-link" href="content/armies.html?filter=approved">Armies</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="content/scenarios.html">Scenarios</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="content/terrain.html">Terrain</a>
         </li>
     </ul>
 
