--- a/content/intro.html
+++ b/content/intro.html
@@ -1,10 +1,10 @@
-<h2>Epic Armageddon: Ragnarok</h2>
+<h2>Epic Armageddon: Ragnarök</h2>
 
-<p>
-    Welcome to the Fan Based website for EA-Ragnarok. On these pages you will find fan based lists and scenarios
-    developed by the
-    EA-Ragnarok team. A lot of list foundations and ideas are credit to the NetEA group, Epic-UK group and the F-ERC
-    group. Special thanks to 'Norto' for a ton of the initial work on this project. We have done these list because we really enjoy the game and list development.
+<p class="lead">
+    Welcome to the Fan Based website for EA-Ragnarök. On these pages you will find fan based lists and scenarios
+    developed by the EA:Ragnarök team. A lot of list foundations and ideas are credit to the NetEA group, Epic-UK group
+    and the F-ERC group. We have done these list because we really enjoy the game and list development. We hope we have
+    created a fresh new vibe on the game and we aim for some fun gaming sessions.
 </p>
 
 <p>
@@ -13,9 +13,64 @@
     to the table through our Discord channel (link on the 'Online Gaming' page) we have set up. With epic being out of
     production for many years now, our gaming friends are far and wide for us. We play alot of games online and invite
     you to also join in on games through the discord channel. We will be setting up a online gaming page with tutorials
-    and links to play games via Table Top Simulator. This software is availible on steam for a few dollars.
+    and links to play games via Table Top Simulator. This software is available on steam for a few dollars. Special
+    thanks to 'Norto' for a ton of the initial work on this project.
 </p>
 
+<h3>Design...</h3>
+<p> We have done a few general changes across all Epic Armageddon: Ragnarök lists that we hope will
+    improve the game, and overall list design.</p>
+
+<h4>Titans</h4>
 <p>
-    We hope we have created a fresh new vibe on the game and we aim for some fun gaming sessions.
+    We wanted Titans to be a more common site in Epic. Looking at NetEA and Epic UK we thought there were a few issues
+    with Titans: They are generally too expensive for the damage output they bring and in many cases they require
+    specialized formations to bring them down, which some armies lack. This leads to situations where the main purpose
+    of the Titan is to deny the enemy BTS, TSNP and DTF by rushing onto the opponents table half, contesting one or both
+    of the T&H objectives. While in som cases very effective, we thought this was not great from a game design
+    perspective.
+</p>
+<p>
+    We have done the following changes to most of the large titans in an attempt to make them a more interesting option.
+</p>
+<ul>
+    <li>
+        We have reduced the price of most titans to make them more viable, given the importance of activations in Epic.
+    </li>
+    <li>
+        We have introduced a general weakness to being swarmed by enemy infantry. To do this we have reduced the close
+        combat value of many titans and also changed the stats on the Titan close combat weapons. Titan close combat
+        weapons now generally give one extra TK attack doing multiple damage instead of giving multiple extra TK or
+        Macro attacks. This reduces their efficiency against infantry while still being useful against other War
+        Engines.
+    </li>
+    <li>
+        We have removed Thick Rear Armour from many Titans to force you to play them with a bit more care.
+    </li>
+    <li>We have introduces the "God Machine" and "Split Fire" special rules for large (8+ DC) titans. God machine gives
+        blast markers to your opponents army if you kill his Titan, and Split Fire allows you to target more than one
+        formation under some circumstances.
+    </li>
+</ul>
+<p>
+    When combining these changes we hope to see more Titans fielded, but also to see that people design lists to support
+    and protect their Titans in a way that was sometimes not needed in NetEA or Epic UK lists. We also hope this reduces
+    the need to bring specialized Titan killer formations to tournaments.
+</p>
+
+<h4>Knights</h4>
+<p>
+    We felt that the War Engine rules did not work well when the War Engines were taken in large formations. They block
+    line of sight for each other, both for shooting and fire-fights, and assaults were very challenging if played by the
+    book. Each Knight can only allocate close combat hits to enemies in base-to-base and fire-fight hits to enemies not
+    in base-to-base. To do this correct you would have to roll for each Knight individually, which is a tedious process.
+    In an attempt to fix this we have introduced a new type of unit: Heavy Vehicle. This is used for Knights and similar
+    units like e.g. Stompas. Details on the Heavy Vehicle rules can be found in the army lists, but on a high level they
+    behave like an Armoured Vehicle with 2 DC.
+</p>
+
+<h4>Formation upgrades</h4>
+<p>
+    Many formation upgrades have received a price reduction to compensate for the loss of activations. We felt that many
+    upgrades were too pricy and were rarely taken given the importance of activations in Epic.
 </p>
