--- a/content/scenarios.html
+++ b/content/scenarios.html
@@ -1,25 +1,26 @@
 <h2>Scenarios</h2>
-<p>The EA-Ragnarok tournament game rules are designed to be used in conjunction with the EA-Ragnarok army lists.
+<p class="lead">The EA:Ragnarök tournament game rules are designed to be used in conjunction with the EA:Ragnarök army lists.
     They will allow two players to fight an evenly balanced battle with little or no preparation.</p>
 <div class="container">
     <div class="row">
-        <div class="col-lg-3 d-none d-lg-block">&nbsp</div>
+        <div class="col-lg-4 d-none d-lg-block">&nbsp</div>
         <div class="col-sm-4 col-lg-2 text-center" style="margin-top: 15px">
             <a href="content/scenarios/battleline.html">
-                <img class="img-responsive 	d-none d-sm-block" style="width:100%"
+                <img class="img-responsive" style="width:100%"
                      src="website/img/Scenario_Battle.jpg"/>
                 Battle Line
             </a>
         </div>
         <div class="col-sm-4 col-lg-2 text-center" style="margin-top: 15px">
             <a href="content/scenarios/fire.html">
-                <img class="img-responsive 	d-none d-sm-block" style="width:100%"
+                <img class="img-responsive" style="width:100%"
                      src="website/img/Scenario_Beacons.jpg"/>
                 Fire the Beacons
                 <br class="d-none d-sm-inline">
                 <i>beta</i>
             </a>
         </div>
+        <!--
         <div class="col-sm-4 col-lg-2 text-center" style="margin-top: 15px">
             <a href="content/scenarios/fog.html">
                 <img class="img-responsive 	d-none d-sm-block" style="width:100%"
@@ -29,5 +30,6 @@
                 <i>beta</i>
             </a>
         </div>
+        -->
     </div>
 </div>
