--- a/content/scenarios/battleline.html
+++ b/content/scenarios/battleline.html
@@ -1,31 +1,75 @@
 <h2>Battle Line</h2>
-<h3>Setup</h3>
-<p>Same as the normal Epic Tournament Scenario.</p>
-<h3>Pre-game discussion</h3>
-<p>Same as the normal Epic Tournament Scenario.</p>
-<h3>Place Objective Markers</h3>
-<p>Same as in the Epic Tournament Scenario, but the Blitz objective must be placed at least 15cm from any corner, and the remaining two
-    objectives must be set up at least 15cm from any board edge.</p>
-<p>As usual, units from broken formations or from formations that have rallied that End Phase cannot capture or contest objectives, but this also includes "They Shall Not Pass". In addition, Aircraft which have landed may neither capture nor contest objectives on the same turn that it lands.</p>
-<h3>Setup Spacecraft & Garrisons</h3>
-<p>Same as the normal Epic Tournament Scenario.</p>
-<h3>Set-up Remaining Formations</h3>
-<p>Same as the normal Epic Tournament Scenario.</p>
-<h3>Victory Conditions</h3>
-<p>If at the end of any turn a player has achieved 4 or more Victory Conditions than the opponent then the game ends,
-    compare victory conditions and work out tournament/battle points.</p>
+<p class="lead">
+    The Battle Line scenario is based on the scenario described in the
+    <a href="https://tp.net-armageddon.org/tournament-pack/#epic-tournament-game-rules">NetEA Epic Tournament Game
+        Rules</a>. The scenario description below describes how the Battle Line scenario differs from the NetEA
+    original. Any section s not mentioned here, such as Setup, Pre-game discussions, etc, uses the exact rules from the
+    NetEA original.
+</p>
+
+<h4>Place Objective Markers</h4>
+<p>Same as the NetEA Epic Tournament Game Rules, but there are some additional restrictions on objective placement.
+    In addition to standard objective placement rules the Blitz objective must be placed at least 15cm away from any
+    corner, and the remaining two objectives must be set up at least 15cm away from any board edge.</p>
+
+<h4>Victory Conditions</h4>
+<p>Same as the NetEA Epic Tournament Game Rules, with the following changes:</p>
+<p>As usual, units from broken formations or from formations that have rallied that End Phase cannot capture or contest
+    objectives, but this also includes "They Shall Not Pass" victory condition. In addition, Aircraft which have landed
+    may neither capture nor contest objectives or deny "They Shall Not Pass" on the same turn that it lands.</p>
+
+<p>If at the end of any turn a player has a 4 or 5 victory condition lead over his opponent then the game ends. Compare
+    victory conditions and calculate the scenario score as if the game had ended in turn 3.</p>
+
 <p>You must check to see if either player has won at the end of the third and fourth game turns. If neither player has
-    won at the end of the fourth turn then the ‘tiebreaker’ rule is used to determine the winner.</p>
-<p> Otherwise it is the same as the normal Epic Tournament Scenario.</p>
-</dl>
-<ul>
-    <h3>Victory Conditions</h3>
-    <li>Total Victory (Difference of 4 or more objectives): 32-0 in turn 3, 30-2 in turn 4.</li>
-    <li>Major Victory (Difference of 3 objectives) 30-2 in turn 3, 28-4 in turn 4.</li>
-    <li>Victory (Difference of 2 objectives) 28-4 in turn 3, 26-6 in turn 4.</li>
-    <li>Minor Victory (Difference of 1 objective) 26-6 in turn 3, 24-8 in turn 4.</li>
-    <li>Winning Draw (Difference of 1 objective at game end, but neither player has 2 objectives). 18-14.</li>
-    <li>Complete Draw (Equal number of objectives) 16-16.</li>
-</ul>
-<h3>Battle Tiebreak</h3>
-<p>Not used in this Scenario.</p>
+    won at the end of the fourth turn then consult the table below to calculate scenario scores, to 'tiebreak' or
+    'victory points' are used in this scenario.</p>
+
+<table class="table table-striped">
+    <thead>
+    <tr>
+        <th scope="col">#</th>
+        <th scope="col">Conditions</th>
+        <th scope="col">Score in turn #3</th>
+        <th scope="col">Score in turn #4</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <th scope="row">Total Victory</th>
+        <td>Difference of 4 or more VCs</td>
+        <td>32-0</td>
+        <td>30-2</td>
+    </tr>
+    <tr>
+        <th scope="row">Major Victory</th>
+        <td>Difference of 3 VCs</td>
+        <td>30-2</td>
+        <td>28-4</td>
+    </tr>
+    <tr>
+        <th scope="row">Victory</th>
+        <td>Difference of 2 VCs</td>
+        <td>28-4</td>
+        <td>26-6</td>
+    </tr>
+    <tr>
+        <th scope="row">Minor Victory</th>
+        <td>Difference of 1 VCs, with one player getting 2 VCs</td>
+        <td>26-6</td>
+        <td>24-8</td>
+    </tr>
+    <tr>
+        <th scope="row">Winning Draw</th>
+        <td>Difference of 1 VC, but neither player has 2 VCs</td>
+        <td>18-14</td>
+        <td>18-14</td>
+    </tr>
+    <tr>
+        <th scope="row">Complete Draw</th>
+        <td>Equal number of VCs</td>
+        <td>16-16</td>
+        <td>16-16</td>
+    </tr>
+    </tbody>
+</table>
