--- a/content/scenarios/fire.html
+++ b/content/scenarios/fire.html
@@ -1,27 +1,88 @@
 <h2>Fire the Beacons</h2>
-<h3>Setup</h3>
-<p>Same as the normal Epic Tournament Scenario.</p>
-<h3>Pre-game discussion</h3>
-<p>Same as the normal Epic Tournament Scenario.</p>
-<h3>Place Objective Markers</h3>
-<p>This scenario requires 3 special objective tokens for each player, with a special marker or double sided marker (for example a coin) which can be flipped or exchanged as objectives switch control between players.</p>
-<p>These objectives are placed in the same manner as in the Epic Tournament Scenario, but the Blitz objective must be placed at least 15cm from any corner, and the remaining two objectives must be set up at least 15cm from any board edge.</p>
-<p>As usual, units from broken formations or from formations that have rallied that End Phase cannot capture or contest objectives, but this also includes "They Shall Not Pass". In addition, Aircraft which have landed may neither capture nor contest objectives on the same turn that it lands.</p>
-<p>Each objective starts the game in possession of the player who's half it is. Unlike in the normal Epic Tournament Scenario, objectives do have memory.</p>
-    <p>Objectives flips sides when the opposing side is the only one that has an unbroken unit within 15cm of it at any point of the turn. This includes units that have successfully rallied, and units that have made a complete move as part of an order (for example after the first move in a double). Formations that are restricted to contesting objectives may only prevent enemy formations from flipping objectives.</p>
-    <p>In the End Phase each uncontested Victory Condition (Blitz, They Shall Not Pass etc.) is worth 1 VP. These VPs accumulate from the first turn onwards.</p>
-    <p>The game ends after three turns, or if either player manages to accumulate a lead of 8 VP in the second turn.</p>
+<p class="lead">
+    The Fire the Beacons scenario is based on the scenario described in the
+    <a href="https://tp.net-armageddon.org/tournament-pack/#epic-tournament-game-rules">NetEA Epic Tournament Game
+        Rules</a>. The scenario description below describes how the Battle Line scenario differs from the NetEA
+    original. Any section s not mentioned here, such as Setup, Pre-game discussions, etc, uses the exact rules from the
+    NetEA original.
+</p>
 
-<h3>Setup Spacecraft & Garrisons</h3>
-<p>Same as the normal Epic Tournament Scenario.</p>
-<h3>Victory Conditions</h3>
-    <li>Total Victory (32-0) (Lead of 8 or more)</li>
-    <li>Crushing Victory (30-2) (Lead of 7)</li>
-    <li>Major Victory (28-4) (Lead of 6)</li>
-    <li>Victory (26-6) (Lead of 5)</li>
-    <li>Minor Victory (24-8) (Lead of 4)</li>
-    <li>Winning Draw (18-14) (Lead of 2-3)</li>
-    <li>Complete Draw (16-16) (Lead of 1 or less) </li>
-</ul>
-<h3>Battle Tiebreak</h3>
-<p>Not used in this Scenario.</p>
+<h4>Place Objective Markers</h4>
+<p>This scenario requires 3 special objective tokens for each player, with a special marker or double sided marker (for
+    example a coin) which can be flipped or exchanged as objectives switch control between players.</p>
+
+<p>These objectives are placed in the same manner as in the Epic Tournament Scenario with some additional restrictions.
+    In addition to standard objective placement rules the Blitz objective must be placed at least 15cm away from any
+    corner, and the remaining two objectives must be set up at least 15cm away from any board edge.</p>
+
+<p>Unlike in the normal Epic Tournament Scenario, objectives do have memory. Each objective starts the game in
+    possession of the player who's half it is.</p>
+
+<p>Objectives flips sides when the opposing side is the only one that has an unbroken unit within 15cm of it at any
+    point of the turn. This includes units that have successfully rallied, and units that have made a complete move as
+    part of an order (for example after the first move in a double). Formations that are restricted to contesting
+    objectives may only prevent enemy formations from flipping objectives.</p>
+
+<h4>Victory Conditions</h4>
+<p>Same as the NetEA Epic Tournament Game Rules, with the following changes:</p>
+
+<p>
+    As usual, units from broken formations or from formations that have rallied that End Phase cannot contest
+    objectives, but this also includes the "They Shall Not Pass" victory condition. A formation the rallies within 15cm
+    from an unguarded enemy objective will immediately flip the objective, before Victory Conditions are calculated. In
+    addition, Aircraft which have landed may neither capture nor contest objectives or deny "They Shall Not Pass" on the
+    same turn that it lands.
+</p>
+
+<p>In the End Phase of each turn each uncontested Victory Condition (Blitz, They Shall Not Pass etc.) is worth 1 point.
+    These points accumulate from the first turn onwards. The "Break their spirit" VC is worth one point per round, e.g.
+    destroying the opponents BTS in turn 2 in worth 1 point in turn 2, one point in turn 3, etc.</p>
+
+<p>The game ends after three turns, or if either player manages to accumulate a lead of 8 VP in the second turn.</p>
+
+<table class="table table-striped">
+    <thead>
+    <tr>
+        <th scope="col">#</th>
+        <th scope="col">Conditions</th>
+        <th scope="col">Score</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <th scope="row">Total Victory</th>
+        <td>Lead of 8 points or more</td>
+        <td>32-0</td>
+    </tr>
+    <tr>
+        <th scope="row">Crushing Victory</th>
+        <td>Lead of 7 points</td>
+        <td>30-2</td>
+    </tr>
+    <tr>
+        <th scope="row">Major Victory</th>
+        <td>Lead of 6 points</td>
+        <td>28-4</td>
+    </tr>
+    <tr>
+        <th scope="row">Victory</th>
+        <td>Lead of 5 points</td>
+        <td>26-6</td>
+    </tr>
+    <tr>
+        <th scope="row">Minor Victory</th>
+        <td>Lead of 4 points</td>
+        <td>24-8</td>
+    </tr>
+    <tr>
+        <th scope="row">Winning Draw</th>
+        <td>Lead of 2-3 points</td>
+        <td>18-14</td>
+    </tr>
+    <tr>
+        <th scope="row">Complete Draw</th>
+        <td>Lead of 1 point or less</td>
+        <td>16-16</td>
+    </tr>
+    </tbody>
+</table>
