Minor text fixes

--- a/content/intro.html
+++ b/content/intro.html
@@ -1,7 +1,7 @@
 <h2>Epic Armageddon: Ragnarök</h2>
 
 <p class="lead">
-    Welcome to the Fan Based website for EA-Ragnarök. On these pages you will find fan based lists and scenarios
+    Welcome to the Fan Based website for EA:Ragnarök. On these pages you will find fan based lists and scenarios
     developed by the EA:Ragnarök team. A lot of list foundations and ideas are credit to the NetEA group, Epic-UK group
     and the F-ERC group. We have done these list because we really enjoy the game and list development. We hope we have
     created a fresh new vibe on the game and we aim for some fun gaming sessions.
