--- a/content/rules.html
+++ b/content/rules.html
@@ -18,7 +18,7 @@
     the TK goes into the nearest surviving unit to the enemy.
 </p>
 
-<h6>Units mixing BP and standard weapons</h6>
+<h6>Formations mixing BP and standard weapons</h6>
 <p>
     As far as we understand there are no rules defining how things work when a formation fires both BP and standard
     weapons. We suggest the following house-rule: A formation can chose to fire it's BP weapons brefore or after any
