Working on finalizing SM. Added list change log as separate file

--- a/content/armies.html
+++ b/content/armies.html
@@ -1,9 +1,10 @@
 <h2>Armies</h2>
 
 <p class="lead">
-    Most Ragnarök list are based on lists developed by the NetEA group, Epic-UK group and the F-ERC group. We have
-    done a few general changes across all Ragnarök lists as well as tweaks, nerfs and boost to improve playability and
-    list balance. Each list contains a description of the list origin and the changes we made from the original.
+    Most EA:Ragnarök list are based on lists developed by the NetEA group, Epic-UK group and the F-ERC group. We have
+    done a few general changes across all EA:Ragnarök lists as well as tweaks, nerfs and boost to hopefully make them
+    more fun to play and less frustrating to play against. Each list contains a description of the list origin and
+    the changes we made from the original.
 </p>
 <!--
 <div class="row">
