--- a/content/list.html
+++ b/content/list.html
@@ -18,7 +18,12 @@
                             content.append(eaTemplating.templates['units'](units));
                         });
 
-                    content.append(eaTemplating.templates['about'](data.about));
+                        $.get("lists/" + race + "/" + list + ".log.html", function(data) {
+                            content.append("<h2>About the list</h2>")
+                            content.append(data);
+                        }).fail(function (jqxhr, textStatus, error) {
+                            console.log("No list log provided");
+                        });
                     }
                 ).fail(function (jqxhr, textStatus, error) {
                     $("#content").html('<h2 class="text-danger">These Are Not The Droids Youre Looking For</h2><p>File: lists/' + race + '/' + list + '.json missing or invalid, error: ' + textStatus);
