--- a/content/scenarios/fire.html
+++ b/content/scenarios/fire.html
@@ -18,9 +18,7 @@
 <p>Unlike in the normal Epic Tournament Scenario, objectives do have memory. Each objective starts the game in
     possession of the player who's half it is.</p>
 
-<p>Objectives flips sides when the opposing side is the only one that has an unbroken unit within 15cm of it at any
-    point of the turn. This includes units that have successfully rallied, and units that have made a complete move as
-    part of an order (for example after the first move in a double). Formations that are restricted to contesting
+<p>Objectives flips sides when the opposing side is the only one that has an unbroken unit within 15cm of it after each completed action by any formation. This includes units that have successfully rallied. Formations that are restricted to contesting
     objectives may only prevent enemy formations from flipping objectives.</p>
 
 <h4>Victory Conditions</h4>
@@ -34,11 +32,10 @@
     same turn that it lands.
 </p>
 
-<p>In the End Phase of each turn each uncontested Victory Condition (Blitz, They Shall Not Pass etc.) is worth 1 point.
-    These points accumulate from the first turn onwards. The "Break their spirit" VC is worth one point per round, e.g.
-    destroying the opponents BTS in turn 2 in worth 1 point in turn 2, one point in turn 3, etc.</p>
+<p>In the End Phase of each turn before formations have rallied, count objectives. The "Break their spirit" VC is worth 3 points once. The Blitz objective is worth 2 points each turn. All other objectives are worth 1 point each turn.
+    These points accumulate from the first turn onwards.</p>
 
-<p>The game ends after three turns, or if either player manages to accumulate a lead of 8 VP in the second turn.</p>
+<p>The game ends after three turns, or if either player manages to accumulate a lead of 8 VP in any turn.</p>
 
 <table class="table table-striped">
     <thead>
