--- a/content/scenarios/fire.html
+++ b/content/scenarios/fire.html
@@ -19,20 +19,19 @@
     possession of the player who's half it is.</p>
 
 <p>Objectives flips sides when the opposing side is the only one that has an unbroken unit within 15cm of it after each completed action by any formation. This includes units that have successfully rallied. Formations that are restricted to contesting
-    objectives may only prevent enemy formations from flipping objectives.</p>
+    objectives may only prevent enemy formations from flipping objectives, while formations that can neither contest nor capture objectives can't cause or prevent the flipping of objectives.</p>
 
 <h4>Victory Conditions</h4>
 <p>Same as the NetEA Epic Tournament Game Rules, with the following changes:</p>
 
 <p>
     As usual, units from broken formations or from formations that have rallied that End Phase cannot contest
-    objectives, but this also includes the "They Shall Not Pass" victory condition. A formation the rallies within 15cm
-    from an unguarded enemy objective will immediately flip the objective, before Victory Conditions are calculated. In
+    objectives, but this also includes the "They Shall Not Pass" victory condition. In
     addition, Aircraft which have landed may neither capture nor contest objectives or deny "They Shall Not Pass" on the
     same turn that it lands.
 </p>
 
-<p>In the End Phase of each turn before formations have rallied, count objectives. The "Break their spirit" VC is worth 3 points once. The Blitz objective is worth 2 points each turn. All other objectives are worth 1 point each turn.
+<p>The "Break their spirit" VC is worth 3 points once. The Blitz objective is worth 2 points each turn. All other objectives are worth 1 point each turn.
     These points accumulate from the first turn onwards.</p>
 
 <p>The game ends after three turns, or if either player manages to accumulate a lead of 8 VP in any turn.</p>
